--- a/index.html
+++ b/index.html
@@ -21,24 +21,30 @@
                 <ul>
                     <li>
                         2ND SEMESTER ROUTINE
-                        <button onclick="loadPage('pages/sem2.html')">Click</button>
+                        <button onclick="loadPage('pages/sem2.html')">View</button>
                     </li>
                     <li>
                         4TH SEMESTER ROUTINE
-                        <button onclick="loadPage('pages/sem4.html')">Click</button>
+                        <button onclick="loadPage('pages/sem4.html')">View</button>
                     </li>
                     <li>
                         6TH SEMESTER ROUTINE
-                        <button onclick="loadPage('pages/sem6.html')">Click</button>
+                        <button onclick="loadPage('pages/sem6.html')">View</button>
                     </li>
                 </ul>
             </aside>
 
             <!-- Content Area -->
             <main id="content">
-                <!-- Default page -->
-                <h2>Welcome to Home</h2>
-                <p>This is the home section. Click buttons on the left to see semester routines.</p>
+                <div class="home-section">
+                    <h2>Welcome to Kanchrapara College Routine</h2>
+                    <p>This web app is designed to help students easily view semester-wise routines. Click the buttons on the left to navigate through 2nd, 4th, and 6th semester schedules.</p>
+                    
+                    <!-- Optional illustration -->
+                    <img src="images/college.png" alt="College Illustration" class="home-image">
+
+                    <p class="tip">Tip: Use the sidebar buttons to quickly switch between semesters!</p>
+                </div>
             </main>
         </div>
     </div>
