--- a/pages/sem2.html
+++ b/pages/sem2.html
@@ -88,6 +88,9 @@
 </tr>
 <tr></tr>
 </table><br>
+<div class="back-button">
+    <button onclick="loadHome()">⬅ Back to Home</button>
+</div>
 
 </body>
 </html>
