--- a/pages/sem4.html
+++ b/pages/sem4.html
@@ -85,6 +85,9 @@
 <tr></tr>
 </table><br>
 
+<div class="back-button">
+    <button onclick="loadHome()">⬅ Back to Home</button>
+</div>
 
 </body>
 </html>
