--- a/pages/sem6.html
+++ b/pages/sem6.html
@@ -89,6 +89,9 @@
 </tr>
 <tr></tr>
 </table><br>
+<div class="back-button">
+    <button onclick="loadHome()">⬅ Back to Home</button>
+</div>
 
 </body>
 </html>
